// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/SidebarAccessStats should not render the component when there are no access stats 1`] = `
<SidebarVersions
  accessStats={
    Object {
      "comment_count": 0,
      "download_count": 0,
      "edit_count": 0,
      "preview_count": 0,
    }
  }
  file={
    Object {
      "extension": "foo",
    }
  }
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
    }
  }
/>
`;

exports[`components/ContentSidebar/SidebarAccessStats should render the component when there is at least one type of access stat 1`] = `
<SidebarVersions
  accessStats={
    Object {
      "comment_count": 0,
      "download_count": 0,
      "edit_count": 0,
      "preview_count": 1,
    }
  }
  file={
    Object {
      "extension": "foo",
    }
  }
  intl={
    Object {
      "formatDate": [Function],
      "formatMessage": [Function],
    }
  }
/>
`;
